--- a/metadata.yaml
+++ b/metadata.yaml
@@ -63,5 +63,6 @@ subjects:
 - !lcsh 'Jews -- Russia -- Politics and government'
 - !lcsh 'Russia -- Politics and government -- 1894-1917'
 - !lcc 'DS'
+- GITenberg
 title: The Shield
 url: http://www.gutenberg.org/ebooks/19453
